# roro-analiza

./: .gitignore  README.md  RoMD_statistici_text.csv  dataset_quality.csv  dataset_statistics.csv  empty_content.csv  folder_aggregates.csv  gazeta_duplicates.csv  pyproject.toml  template.ipynb
data-cleaned/int/Canada_EN/: Ziarul_ZigZag_0002.json  Ziarul_ZigZag_0003.json  Ziarul_ZigZag_0008.json  Ziarul_ZigZag_0010.json  Ziarul_ZigZag_0012.json  Ziarul_ZigZag_0014.json  Ziarul_ZigZag_0015.json  Ziarul_ZigZag_0017.json  Ziarul_ZigZag_0018.json  Ziarul_ZigZag_0019.json  Ziarul_ZigZag_0020.json  Ziarul_ZigZag_0021.json  Ziarul_ZigZag_0022.json  Ziarul_ZigZag_0025.json  Ziarul_ZigZag_0026.json  Ziarul_ZigZag_0027.json  Ziarul_ZigZag_0028.json  Ziarul_ZigZag_0030.json  Ziarul_ZigZag_0031.json  Ziarul_ZigZag_0032.json  Ziarul_ZigZag_0036.json  Ziarul_ZigZag_0037.json  Ziarul_ZigZag_0039.json  Ziarul_ZigZag_0040.json  Ziarul_ZigZag_0041.json  Ziarul_ZigZag_0042.json  Ziarul_ZigZag_0045.json  Ziarul_ZigZag_0048.json  (+301 more)
roro_module/: __init__.py  __main__.py  analyzer.py  parser.py  pyproject.toml
roro_module/analysis/: bert_classifier.py  dataset_statistics.py  logistic_reg_tf_idf_classifier.py  sentence_stats.py  sentence_stats_classifier.py  sentence_word_freq.py
src/: cleanup-data-cleaned.py
src/analysis/: template.ipynb
stats/bert_classifier/: banat-small.csv  ro-md-small.csv
stats/logistic_reg_tf_idf_classifier/: 18_11_regiuni_all.csv  18_11_regiuni_all_norm.csv  18_11_regiuni_all_raw.csv  18_11_romd_all.csv  18_11_romd_all_norm.csv  18_11_romd_all_raw.csv  18_11_romd_functional.csv  18_11_romd_functional_norm.csv  18_11_romd_functional_raw.csv
stats/sentence_stats/: dataset_2.csv  judete_2.csv  regiuni_istorice_2.csv  test_ardeal.csv
stats/sentence_stats_classifier/: 18_11_romd.csv  18_11_romd_norm.csv  18_11_romd_raw.csv
(+34676 files in other folders)
