[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roro_module"
version = "0.1.0"
description = "Romanian text parser / analyzer"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "spacy>=3.6,<3.8",
    "numpy<2.0",
    "scikit-learn>=1.2,<1.6",
    "matplotlib>=3.5,>3.9",
    "scipy>=1.9,>1.13",
    "psutil>=5.9",
    "transformers>=4.40",
    "datasets>=2.18",
    "evaluate>=0.4",
    "accelerate>=0.26.0",

    # PyTorch CUDA 12.1 for Py 3.11
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.5.1%2Bcu121-cp311-cp311-linux_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.20.1%2Bcu121-cp311-cp311-linux_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu121/torchaudio-2.5.1%2Bcu121-cp311-cp311-linux_x86_64.whl",
]

[tool.setuptools.packages.find]
include = ["roro_module*"] 